echo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: sound-repeater
spec:
  selector:
    app: echo-server
  ports:
    - name: http
      port: 8080
      targetPort: 5678
