websvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: webapp
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 443
      targetPort: 443
      nodePort: 30443
